mesinabox/stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: cmos
    app.kubernetes.io/instance: cmos
  name: cmos
