mesinabox/stack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: cmos
    app.kubernetes.io/instance: cmos
    #app.kubernetes.io/version: 11.0.0
  name: cmos
  namespace: cmos
spec:
  replicas: 1 # to be checked
  selector:
    matchLabels:
      app.kubernetes.io/name: cmos
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cmos
        app.kubernetes.io/instance: cmos
        #app.kubernetes.io/version: 11.0.0
        app.kubernetes.io/managed-by: devopscenter.criticalmanufacturing
        devopscenter.criticalmanufacturing/version: "1"
    spec:
      containers:
      - name: cmos
        image: dev.criticalmanufacturing.io/rita/kioskapp:1.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8081 
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: "/opt/app-root/src/data"
          name: cmos-volume
        - name: pipe-volume
          mountPath: /opt/app-root/src/pipe
      volumes:
       - name: cmos-volume
         persistentVolumeClaim:
          claimName: cmos-pvc
       - name: pipe-volume
         hostPath:
          path: /var/run            # Path on the host node containing the named pipe 
      restartPolicy: Always
