mesinabox/stack/nodetest-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: nodetest
    app.kubernetes.io/instance: nodetest
  name: nodetest
  namespace: nodetest
spec:
  selector:
    app.kubernetes.io/name: nodetest
  type: ClusterIP
  ports:
    - name: "8081"
      protocol: TCP
      port: 8081 
      targetPort: 8081
