mesinabox/stack/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: cmos
    app.kubernetes.io/instance: cmos
  name: cmos
  namespace: cmos
spec:
  selector:
    app.kubernetes.io/name: cmos
  type: ClusterIP
  ports:
    - name: "8081"
      protocol: TCP
      port: 8081
      targetPort: 8081
